--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,17 @@
+.navbar-brand img {
+  height: 50px;           /* pienennä korkeutta */
+  width: auto;            /* säilyttää kuvasuhteen */
+  object-fit: contain;    /* varmistaa ettei veny */
+  padding: 0 !important;
+  margin: 0 !important;
+  display: block;         /* poistaa "tekstin rivivälin" ympäriltä */
+}
+.navbar-brand {
+     padding: 0 !important;
+  display: flex;
+  align-items: center; /* keskittää logon pystysuunnassa */
+ margin-right: 2rem;
+}
 .navbar-custom {
     background-color: rgba(41, 14, 162, 0.9);
 }
@@ -28,4 +42,11 @@
 .carousel {
     width: 60%;
     margin:auto;
+}
+.carousel-caption {
+    background-color: rgba(223, 224, 228, 0.8);
+    color:darkblue
+}
+body {
+    background-color: #d2e3ed;
 }
