--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,19 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 body p{
     text-align: center;
     font-family: Verdana;
-    font-size: 18px;
-    margin-top: 40px;
     margin-bottom: 20px;
 }
 .navbar-brand img {
   height: 50px;           /* pienennä korkeutta */
   width: auto;            /* säilyttää kuvasuhteen */
   object-fit: contain;    /* varmistaa ettei veny */
-  padding: 0 !important;
+  padding-right: 10px;
   margin: 0 !important;
   display: block;         /* poistaa "tekstin rivivälin" ympäriltä */
+  
 }
 .navbar-brand {
      padding: 0 !important;
@@ -31,11 +33,16 @@ body p{
 .navbar-custom .navbar-nav .nav-link {
     color: rgba(223, 224, 228, 0.8);
 }
+.nav-item .dropdown-menu a:hover {
+            color: white !important;
+            background: rgb(85, 105, 219) !important;
+            cursor: pointer;
+  }
 
 /* aktiivisen & hover-linkin väri */
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
-    color: #648dcf;
+    color: #83e1e6;
 }
 
 .custom-toggler .navbar-toggler-icon {
@@ -45,7 +52,7 @@ body p{
             border-color: rgba(255,102,203, 0.5);
         }
 
-
+/*karusellin leveys*/
 .carousel {
     width: 70%;
     margin:auto;
@@ -55,10 +62,119 @@ body p{
     background-color: rgba(223, 224, 228, 0.8);
     color:darkblue
 }
-
+/*grid asetukset*/
 .container .col-md-4 img{
-    width: 100%;   
+    width: 100%;
 }
 #kuva2 {
     margin-right:0;
+
+/*fontit*/
+}
+.poppins-thin {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.poppins-extralight {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.poppins-light {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-black {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.poppins-thin-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.poppins-extralight-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.poppins-light-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.poppins-regular-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.poppins-medium-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.poppins-semibold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.poppins-bold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.poppins-extrabold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.poppins-black-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: italic;
 }
