navipalkin kiinnitys ja seuraava navigointi

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ body p{
     text-align: center;
     font-family: Verdana;
     margin-bottom: 20px;
+    position: relative; 
 }
 .navbar-brand img {
   height: 50px;           /* pienennä korkeutta */
@@ -13,7 +14,7 @@ body p{
   padding-right: 10px;
   margin: 0 !important;
   display: block;         /* poistaa "tekstin rivivälin" ympäriltä */
-  
+
 }
 .navbar-brand {
      padding: 0 !important;
@@ -22,7 +23,7 @@ body p{
  margin-right: 2rem;
 }
 .navbar-custom {
-    background-color: rgba(41, 14, 162, 0.9);
+    background-color: rgb(41, 14, 162 );
 }
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text{
@@ -42,14 +43,21 @@ body p{
 /* aktiivisen & hover-linkin väri */
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
-    color: #83e1e6;
+    color: #99ddec;
 }
+.nav-link.active {
+	  color: #9ee5f8 !important;
+	}
+
+
 
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(223, 224, 228, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  
 }
 .custom-toggler.navbar-toggler {
-            border-color: rgba(255,102,203, 0.5);
+            border-color: rgb(136, 141, 214);
+            
         }
 
 /*karusellin leveys*/
